Add simple test

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,8 +14,8 @@ classifiers = [
 [project.optional-dependencies]
 dev = [
     "ruff",
-    "pytest",
-    "pytest-cov",
+    "pytest>=9.0.2,<10.0.0",
+    "pytest-cov>=7.0.0,<8.0.0",
 ]
 
 [tool.pytest.ini_options]
