--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "This is n project used as an example in the CI/CD flow at meemoo"
 readme = "README.md"
 requires-python = ">= 3.12"
 dependencies = [
+    "viaa-chassis",
     "litestar[standard]>=2.19.0,<3.0.0"
 ]
 classifiers = [
