--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,10 @@
 name: CI
 on:
   workflow_dispatch:
+  pull_request:
+    types:
+      - opened
+      - reopened
   push:
     branches:
       - main
