--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,16 +2,10 @@ name: CI
 on:
   workflow_dispatch:
   pull_request:
-    types:
-      - opened
-      - reopened
-      - synchronize
+    types: [opened, reopened, synchronize]
   push:
-    branches:
-      - main
-      - release
-    tags:
-      - "v*.*.*"
+    branches: [main, release]
+    tags: [v*.*.*]
 
 # Disable concurrent builds
 concurrency:
