Don't skip change-image-tag

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,7 +83,20 @@ jobs:
     needs:
       - build-and-push
       - promote-image
-    if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/release' || startsWith(github.ref, 'refs/tags/v')
+    # Run if one of the jobs "build-and-push" or "promote-image" were succesful.
+    # Add extra guards to check if we're not in the context of a pull request.
+    if: |
+      always() &&
+      github.event_name == 'push' &&
+      (
+        github.ref == 'refs/heads/main' ||
+        github.ref == 'refs/heads/release' ||
+        startsWith(github.ref, 'refs/tags/v')
+      ) &&
+      (
+        needs.build-and-push.result == 'success' ||
+        needs.promote-image.result == 'success'
+      )
     permissions:
       contents: read
     steps:
