--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -120,6 +120,7 @@ jobs:
         with:
           repository: ${{ github.repository_owner }}/${{ env.DEPLOYMENT_REPO_NAME }}
           path: ${{ env.DEPLOYMENT_REPO_NAME }}
+          token: ${{ secrets.DEPLOYMENT_TOKEN }}
           ref: main
       - name: Update image tag in deployment.yaml
         uses: mikefarah/yq@v4
@@ -131,8 +132,8 @@ jobs:
       - name: Commit and push changes to deployment repository
         run: |
           cd kustomize/${{ env.DEPLOYMENT_REPO_NAME }}/${{ github.event.repository.name }}/${{ env.ENV_FOLDER }}
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
           git add kustomization.yaml
           git commit -m "Update ${{ github.event.repository.name }} image tag ${{ env.ENV_FOLDER }} to ${{ env.IMAGE_TAG }}" || echo "No changes to commit"
           git push origin main
