--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -128,7 +128,7 @@ jobs:
           cmd: |
             ls
             cd ${{ env.DEPLOYMENT_REPO_NAME }}/kustomize/${{ github.event.repository.name }}/overlays/${{ env.ENV_FOLDER }}
-            yq -i '.images[0].newTag = "${{ env.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}" kustomization.yaml
+            yq -i '.images[0].newTag = "${{ env.ACR_LOGIN_SERVER }}/${{ env.IMAGE_NAME }}:${{ env.IMAGE_TAG }}"' kustomization.yaml
       - name: Commit and push changes to deployment repository
         run: |
           cd kustomize/${{ env.DEPLOYMENT_REPO_NAME }}/${{ github.event.repository.name }}/${{ env.ENV_FOLDER }}
